--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
-body {
-  background-color: blue;
+.color1 {
+  background-color: #262f40;
+}
+
+.color2 {
+  background-color: #f9c127;
+}
+
+.color3 {
+  background-color: #889bbf;
+}
+
+.color4 {
+  background-color: #bfb488;
 }
