--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
  #bfb488 Бежевый цвет  
  */
 body {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start; /* Позиционирование по верхнему краю */
+  flex-wrap: wrap; /* Разрешаем перенос контейнеров */
   font-family: 'Roboto', sans-serif;
   /* background-color: #262f40; Темно-синий фон страницы */
   border: 2px solid;
@@ -25,6 +29,11 @@ body {
   text-align: center;
   max-width: 400px;
   width: 100%;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap; */
 }
 
 .container h1 {
