добавлено отражения суммы в строчку

--- a/style.css
+++ b/style.css
@@ -141,10 +141,13 @@ button:hover,
 }
 
 #resultContainer {
-  margin-top: 15px; /* Добавляет отступ сверху */
-  font-size: 1rem; /* Немного увеличиваем размер шрифта */
+  margin-top: 15px;
+  font-size: 1rem;
   color: #f9c127; /* Темно-синий цвет */
-  text-align: center; /* Центрируем текст */
+  text-align: center;
+  white-space: nowrap; /* Запрещает перенос строк, все суммы будут в одной строке */
+  overflow: hidden; /* Скрывает лишний текст, если он выходит за пределы контейнера */
+  text-overflow: ellipsis; /* Добавляет многоточие, если текст не помещается */
 }
 
 /* Сделаем контейнер для поля суммы и валюты с кнопками на одной строке */
